# OCR-AI

./: .flake8  .gitignore  DRB_Metalcore_text.sql  README.md  Runtime_Software.py  main.py  main.spec  pyinstaller.txt  requirements-dev.txt  requirements.txt  test_SLMP.py
DRB-OCR-AI-V2/: .gitignore  README.md  pyproject.toml
DRB-OCR-AI-V2/configs/: basler_mitsubishi_slmp.env.example
DRB-OCR-AI-V2/docs/: ARCHITECTURE.md  MIGRATION_MAP.md  UI_PARITY_PLAN.md
DRB-OCR-AI-V2/examples/recipes/: ocr_segment_recipe.yaml
DRB-OCR-AI-V2/src/drb_inspection/: __init__.py
DRB-OCR-AI-V2/src/drb_inspection/adapters/: __init__.py
DRB-OCR-AI-V2/src/drb_inspection/app/: bootstrap.py  container.py  settings.py
DRB-OCR-AI-V2/src/drb_inspection/plugins/: __init__.py  base.py  registry.py
DRB-OCR-AI-V2/src/drb_inspection/shared/: __init__.py  events.py
DRB-OCR-AI-V2/src/drb_inspection/ui/: __init__.py  navigation.py  shell.py
DRB-OCR-AI-V2/src/drb_inspection/ui/qt/: __init__.py  (+6 more)
DRB-OCR-AI-V2/tests/: __init__.py  test_access_context.py  test_basler_camera.py  test_bootstrap.py  test_configure_camera.py  test_context_flow.py  test_contracts.py  test_cycle.py  test_inspection_artifact_recorder.py  test_ocr_helpers.py  test_ocr_plugin.py  test_ocr_runtime.py  test_pipeline.py  test_plc_client.py  test_poll_plc_signals.py  test_product_catalog_loader.py  test_qt_login_widget.py  test_qt_main_widget.py  test_recipe_loader.py  test_repository_backends.py  test_run_current_product_cycle.py  test_runtime_settings.py  test_runtime_use_cases.py  test_ui_presenters.py  test_use_case.py
(+139 files in other folders)
