[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drb-ocr-ai-v2"
version = "0.1.0"
description = "Next-generation modular desktop inspection platform for OCR, classify, and segment workflows."
requires-python = ">=3.9"
dependencies = [
  "PyQt5>=5.15,<6.0",
  "PyYAML>=6.0,<7.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
]

[project.scripts]
drb-v2 = "drb_inspection.app.bootstrap:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
